--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
     </button>
 </div>
     <script src="script.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
